--- a/1_Sequential_Model.ipynb
+++ b/1_Sequential_Model.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPzYq7U1xwioFgLMUk/aZY/",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyO+PEGJZwWVDIpsELFvGYRy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +29,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "gw9B5mhu0iBR"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import tensorflow as tf\n",
+        "from tensorflow import keras\n",
+        "from keras import layers"
+      ]
     }
   ]
 }
