--- a/1_Sequential_Model.ipynb
+++ b/1_Sequential_Model.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO+PEGJZwWVDIpsELFvGYRy",
+      "authorship_tag": "ABX9TyOSxDrA1Eq/HlKzHa7h4PZN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,6 +39,29 @@
         "from tensorflow import keras\n",
         "from keras import layers"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = keras.Sequential()"
+      ],
+      "metadata": {
+        "id": "zxu8zFY72r3U"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.add(layers.Dense(16, activation = \"relu\"))\n",
+        "model.add(layers.Dense(10, activation = \"softmax\"))"
+      ],
+      "metadata": {
+        "id": "9zFHyyt723y4"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
