--- a/1_Sequential_Model.ipynb
+++ b/1_Sequential_Model.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOSxDrA1Eq/HlKzHa7h4PZN",
+      "authorship_tag": "ABX9TyP9ZU8w14L+BS0EyrW/2TJt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,22 +43,166 @@
     {
       "cell_type": "code",
       "source": [
-        "model = keras.Sequential()"
+        "model = keras.Sequential(name = \"mysequential-model\")"
       ],
       "metadata": {
         "id": "zxu8zFY72r3U"
       },
-      "execution_count": 2,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "model.add(layers.Dense(16, activation = \"relu\"))\n",
-        "model.add(layers.Dense(10, activation = \"softmax\"))"
+        "model.add(layers.Dense(16, activation = \"relu\", name=\"layer-1\"))\n",
+        "model.add(layers.Dense(10, activation = \"softmax\", name = \"layer-2\"))"
       ],
       "metadata": {
         "id": "9zFHyyt723y4"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.build(input_shape=(None, 4))"
+      ],
+      "metadata": {
+        "id": "foD8P2oF3RVd"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.summary()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "h--8UltF3mnn",
+        "outputId": "d2d7c8d5-1c4a-40c8-f6ac-de6aa1c7fb7e"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"mysequential-model\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " layer-1 (Dense)             (None, 16)                80        \n",
+            "                                                                 \n",
+            " layer2 (Dense)              (None, 10)                170       \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 250\n",
+            "Trainable params: 250\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.weights"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qFawJXo95Qbp",
+        "outputId": "b506cb3e-3360-4305-b080-606432e712ed"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[<tf.Variable 'layer-1/kernel:0' shape=(4, 16) dtype=float32, numpy=\n",
+              " array([[ 0.48873425,  0.11391658, -0.24847251, -0.3476667 , -0.3339463 ,\n",
+              "          0.3403008 ,  0.2684635 ,  0.36559165, -0.33631253, -0.03227806,\n",
+              "         -0.46880192,  0.12410408,  0.2985928 , -0.30933166,  0.10057122,\n",
+              "          0.2012788 ],\n",
+              "        [-0.18836871, -0.42610878, -0.1359374 ,  0.1779862 , -0.16953787,\n",
+              "          0.08353758,  0.00640815,  0.49239182,  0.38145745,  0.5019015 ,\n",
+              "          0.04294348,  0.04717135,  0.26790714,  0.4533702 ,  0.14565414,\n",
+              "         -0.05101651],\n",
+              "        [-0.4327507 ,  0.37955844,  0.3352037 ,  0.24982095, -0.4740169 ,\n",
+              "          0.5408155 , -0.35281315,  0.30431616, -0.49613982, -0.3731299 ,\n",
+              "          0.03689688,  0.25455564,  0.0131163 ,  0.11612666, -0.29102606,\n",
+              "          0.32830924],\n",
+              "        [-0.5177138 , -0.42646763, -0.4605804 , -0.48981184,  0.5276278 ,\n",
+              "          0.00342023,  0.21723318,  0.4670534 , -0.44839102, -0.2536268 ,\n",
+              "         -0.40285653,  0.02379274, -0.15036023,  0.47431576,  0.41861987,\n",
+              "         -0.4651822 ]], dtype=float32)>,\n",
+              " <tf.Variable 'layer-1/bias:0' shape=(16,) dtype=float32, numpy=\n",
+              " array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       dtype=float32)>,\n",
+              " <tf.Variable 'layer2/kernel:0' shape=(16, 10) dtype=float32, numpy=\n",
+              " array([[ 0.00459242, -0.05254754, -0.36281323, -0.02852583, -0.20635805,\n",
+              "         -0.08427492, -0.1824528 , -0.21173823, -0.11562088,  0.23806894],\n",
+              "        [-0.32171994, -0.13406473, -0.4191802 , -0.36782873, -0.05518031,\n",
+              "         -0.06676689,  0.3439592 ,  0.14058828,  0.05225092,  0.01142886],\n",
+              "        [-0.19093773, -0.2370994 , -0.21487525, -0.16715491,  0.28223968,\n",
+              "         -0.46783343, -0.10838425, -0.4638408 , -0.3406294 , -0.0023258 ],\n",
+              "        [ 0.3779021 ,  0.26213187,  0.42973292,  0.3270619 ,  0.04391509,\n",
+              "         -0.13186023, -0.1721065 ,  0.364241  , -0.01933813, -0.3100231 ],\n",
+              "        [-0.382775  , -0.45467934,  0.4184575 ,  0.0083752 ,  0.38101542,\n",
+              "         -0.146597  , -0.23859198,  0.00993559,  0.06298774,  0.43595636],\n",
+              "        [-0.20236006, -0.39937007,  0.45978498,  0.36342263,  0.4400401 ,\n",
+              "         -0.42012018, -0.23551942, -0.18404388,  0.08795828,  0.2234571 ],\n",
+              "        [-0.33566454,  0.32980722, -0.03259289,  0.28770804,  0.46141583,\n",
+              "         -0.13967133, -0.43656018,  0.23017901, -0.34798753, -0.41761833],\n",
+              "        [-0.4351725 ,  0.3950302 , -0.38016653,  0.10562205, -0.25161594,\n",
+              "         -0.19537118,  0.46587205, -0.26794475, -0.3703386 , -0.33750954],\n",
+              "        [ 0.03378254,  0.473697  , -0.1280173 , -0.4712709 ,  0.24516743,\n",
+              "          0.17857337,  0.2905532 ,  0.2955621 ,  0.00483808,  0.3428551 ],\n",
+              "        [-0.1429834 , -0.4090507 ,  0.13910007,  0.31674057, -0.0244841 ,\n",
+              "         -0.46578157,  0.19432676, -0.0789867 ,  0.1041984 ,  0.18506837],\n",
+              "        [-0.18507001, -0.41169515, -0.4219008 , -0.2154186 ,  0.24757361,\n",
+              "         -0.12539771, -0.19196725,  0.40452105, -0.02896929, -0.31355667],\n",
+              "        [ 0.02641797,  0.24467093,  0.28877515,  0.4283285 , -0.31017876,\n",
+              "         -0.42706245, -0.02031741,  0.10988051,  0.14220077, -0.19504339],\n",
+              "        [-0.08164993,  0.15858436,  0.08915925,  0.3862009 , -0.26867455,\n",
+              "         -0.4206137 , -0.13922375, -0.12418917,  0.12621629,  0.01363087],\n",
+              "        [ 0.42666125, -0.26737735, -0.08364314, -0.47480592,  0.05981922,\n",
+              "         -0.44213712,  0.05795151,  0.0868457 ,  0.4356321 ,  0.17122567],\n",
+              "        [-0.27067167, -0.25460893,  0.40871453,  0.01042384, -0.4531169 ,\n",
+              "          0.20989013,  0.15188098,  0.41251522,  0.1711238 , -0.06616524],\n",
+              "        [ 0.35852468, -0.21210483,  0.2542888 ,  0.24102181,  0.18178052,\n",
+              "         -0.05786163,  0.21390897, -0.13676909,  0.4408912 , -0.32032245]],\n",
+              "       dtype=float32)>,\n",
+              " <tf.Variable 'layer2/bias:0' shape=(10,) dtype=float32, numpy=array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.], dtype=float32)>]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "sCu1Bs1q5r99"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Ve3GJfi05jDx"
       },
       "execution_count": null,
       "outputs": []
