--- a/1_Sequential_Model.ipynb
+++ b/1_Sequential_Model.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP9ZU8w14L+BS0EyrW/2TJt",
+      "authorship_tag": "ABX9TyPUKP2I0gReg4h6WEvlCGm2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,6 +64,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Try calling model summary or weights before calling build. What happens? The shape / or the weights of the layers depends on the shape of the inputs."
+      ],
+      "metadata": {
+        "id": "6d7BiivJc_N3"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "model.build(input_shape=(None, 4))"
@@ -97,8 +106,22 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Now create a new model. This time add the Input class with shape. Are you able to see the model summary/weights?"
+      ],
+      "metadata": {
+        "id": "bfoip8S0fkPH"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "model_2 = keras.Sequential()\n",
+        "model_2.add(keras.Input(shape=(4,)))\n",
+        "model_2.add(layers.Dense(16, activation = \"relu\"))\n",
+        "model_2.add(layers.Dense(10, activation=\"softmax\"))"
+      ],
       "metadata": {
         "id": "sCu1Bs1q5r99"
       },
@@ -107,9 +130,22 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "model_2.summary()"
+      ],
       "metadata": {
-        "id": "Ve3GJfi05jDx"
+        "id": "TxqDIYDlgAQF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model_2.weights"
+      ],
+      "metadata": {
+        "id": "Fcg1bPwagQV9"
       },
       "execution_count": null,
       "outputs": []
