--- a/2_Create_Model_Using_Functional_API.ipynb
+++ b/2_Create_Model_Using_Functional_API.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "collapsed_sections": [],
       "authorship_tag": "ABX9TyOmaxWUqEy6F+WEkuX02/0y",
       "include_colab_link": true
     },
