--- a/keras-models/4_Subclassing_Model.ipynb
+++ b/keras-models/4_Subclassing_Model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNKNa4s4rMP+Plk4ISHE8ix",
+      "authorship_tag": "ABX9TyO0l/V37Cni20IeWzaoD90r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "wujoHm8RuffY"
       },
@@ -40,9 +40,53 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class CustomModel(keras.Model):\n",
+        "\n",
+        "  def __init__(self):\n",
+        "    super.__init__()\n",
+        "    self.concat_layer = keras.layers.Concatenate()\n",
+        "    self.dense_layer = keras.layers.Dense(64, activation=\"relu\")\n",
+        "    self.output1_layer = keras.layers.Dense(10, activation=\"softmax\")\n",
+        "    self.output2_layer = keras.layers.Dense(1, activation=\"sigmoid\")\n",
+        "\n",
+        "\n",
+        "  def __call__(self, inputs):\n",
+        "    features = self.concat_layer(inputs[0], inputs[1], inputs[2])\n",
+        "    features = self.dense_layer(features)\n",
+        "\n",
+        "    output_1 = self.output1_layer(features)\n",
+        "    output_2 = self.output2_layer(features)\n",
+        "\n",
+        "    return output_1, output_2\n",
+        "\n"
+      ],
       "metadata": {
         "id": "E0P7u3dKu2Ja"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "7Ys784c305Qu"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_input_1 = np.random.randint(0, 2, size=(5000, 32))\n",
+        "train_input_2 = np.random.randint(0, 2, size=(5000, 32))\n",
+        "train_input_3 = np.random.randint(0, 2, size=(5000, 32))"
+      ],
+      "metadata": {
+        "id": "NhrpEKPS09s5"
       },
       "execution_count": null,
       "outputs": []
