--- a/computer-vision/1-computer-vision.ipynb
+++ b/computer-vision/1-computer-vision.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNa+OSr+iP7gx8zrIhxuz7x",
+      "authorship_tag": "ABX9TyP9b7Y6WFnzzt6L4v2WUbuy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,10 @@
         "id": "3m4IG6so7RAu"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import tensorflow as tf\n",
+        "from tensorflow import keras"
+      ]
     }
   ]
 }
