added custom callback method

--- a/computer-vision/1-computer-vision.ipynb
+++ b/computer-vision/1-computer-vision.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM9ZYbd89gmkBF7qbEVM6N2",
+      "authorship_tag": "ABX9TyMZ/ZZX2k+adNG2mM/7UjZZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,11 +47,11 @@
         "(train_data, train_label), (test_data, test_label) = mnist.load_data()"
       ],
       "metadata": {
-        "id": "hepL-_2zuQS6",
-        "outputId": "3cdcffb4-2d0e-4e1f-a8ff-945e2d63327c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hepL-_2zuQS6",
+        "outputId": "fadecd6d-f80d-4220-87d4-6dde5467d09d"
       },
       "execution_count": 2,
       "outputs": [
@@ -99,7 +99,7 @@
       "metadata": {
         "id": "DYjyJVxAun4a"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -110,7 +110,7 @@
       "metadata": {
         "id": "Wd-7qcffwr5p"
       },
-      "execution_count": 15,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -119,42 +119,42 @@
         "model.summary()"
       ],
       "metadata": {
-        "id": "sXJdD1kwwuwH",
-        "outputId": "e1ee7257-51cd-4af9-8511-2310fe6af45f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sXJdD1kwwuwH",
+        "outputId": "f3ac5f9a-c041-486e-adc5-a74b8b0b7ab7"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Model: \"model_1\"\n",
+            "Model: \"model\"\n",
             "_________________________________________________________________\n",
             " Layer (type)                Output Shape              Param #   \n",
             "=================================================================\n",
-            " input_2 (InputLayer)        [(None, 28, 28, 1)]       0         \n",
+            " input_1 (InputLayer)        [(None, 28, 28, 1)]       0         \n",
             "                                                                 \n",
-            " conv2d_3 (Conv2D)           (None, 26, 26, 32)        320       \n",
+            " conv2d (Conv2D)             (None, 26, 26, 32)        320       \n",
             "                                                                 \n",
-            " max_pooling2d_3 (MaxPooling  (None, 13, 13, 32)       0         \n",
+            " max_pooling2d (MaxPooling2D  (None, 13, 13, 32)       0         \n",
+            " )                                                               \n",
+            "                                                                 \n",
+            " conv2d_1 (Conv2D)           (None, 11, 11, 64)        18496     \n",
+            "                                                                 \n",
+            " max_pooling2d_1 (MaxPooling  (None, 5, 5, 64)         0         \n",
             " 2D)                                                             \n",
             "                                                                 \n",
-            " conv2d_4 (Conv2D)           (None, 11, 11, 64)        18496     \n",
+            " conv2d_2 (Conv2D)           (None, 3, 3, 128)         73856     \n",
             "                                                                 \n",
-            " max_pooling2d_4 (MaxPooling  (None, 5, 5, 64)         0         \n",
+            " max_pooling2d_2 (MaxPooling  (None, 1, 1, 128)        0         \n",
             " 2D)                                                             \n",
             "                                                                 \n",
-            " conv2d_5 (Conv2D)           (None, 3, 3, 128)         73856     \n",
+            " flatten (Flatten)           (None, 128)               0         \n",
             "                                                                 \n",
-            " max_pooling2d_5 (MaxPooling  (None, 1, 1, 128)        0         \n",
-            " 2D)                                                             \n",
-            "                                                                 \n",
-            " flatten_1 (Flatten)         (None, 128)               0         \n",
-            "                                                                 \n",
-            " dense_1 (Dense)             (None, 10)                1290      \n",
+            " dense (Dense)               (None, 10)                1290      \n",
             "                                                                 \n",
             "=================================================================\n",
             "Total params: 93,962\n",
@@ -175,18 +175,34 @@
       "metadata": {
         "id": "4w11tUmgxFR-"
       },
-      "execution_count": 16,
+      "execution_count": 35,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "mycallbacks = [keras.callbacks.EarlyStopping(monitor=\"val_accuracy\", patience=2)]"
+        "mycallbacks = [keras.callbacks.EarlyStopping(monitor=\"loss\", patience=2, )]"
       ],
       "metadata": {
         "id": "RcxWNgjvxxdh"
       },
-      "execution_count": 13,
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class mycustomcallback(keras.callbacks.Callback):\n",
+        "\n",
+        "  def on_epoch_end(self,epochs,logs):\n",
+        "    if(logs[\"accuracy\"]>0.99):\n",
+        "      print(f\"\\n reached 99% accuracy. Stopping training. Loss at: {logs['loss']}\")\n",
+        "      self.model.stop_training=True\n"
+      ],
+      "metadata": {
+        "id": "pPg5LVItcFOd"
+      },
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -197,37 +213,35 @@
         "                       validation_data = (test_data, test_label),\n",
         "                       batch_size = 128,\n",
         "                       epochs=20,\n",
-        "                       callbacks = mycallbacks)"
+        "                       callbacks = mycustomcallback())"
       ],
       "metadata": {
-        "id": "cPUW3MdWxUcd",
-        "outputId": "db412243-dd50-4240-e961-0b1d50dc7532",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cPUW3MdWxUcd",
+        "outputId": "08bfdf27-e5ba-4882-8aa5-b244334f3994"
       },
-      "execution_count": 17,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/20\n",
-            "469/469 [==============================] - 4s 6ms/step - loss: 0.3392 - accuracy: 0.8940 - val_loss: 0.0921 - val_accuracy: 0.9720\n",
+            "469/469 [==============================] - 3s 6ms/step - loss: 0.2978 - accuracy: 0.9090 - val_loss: 0.0923 - val_accuracy: 0.9729\n",
             "Epoch 2/20\n",
-            "469/469 [==============================] - 3s 6ms/step - loss: 0.0941 - accuracy: 0.9714 - val_loss: 0.0705 - val_accuracy: 0.9787\n",
+            "469/469 [==============================] - 3s 6ms/step - loss: 0.0890 - accuracy: 0.9729 - val_loss: 0.0672 - val_accuracy: 0.9788\n",
             "Epoch 3/20\n",
-            "469/469 [==============================] - 3s 6ms/step - loss: 0.0639 - accuracy: 0.9805 - val_loss: 0.0618 - val_accuracy: 0.9826\n",
+            "469/469 [==============================] - 3s 6ms/step - loss: 0.0619 - accuracy: 0.9812 - val_loss: 0.0567 - val_accuracy: 0.9831\n",
             "Epoch 4/20\n",
-            "469/469 [==============================] - 3s 6ms/step - loss: 0.0479 - accuracy: 0.9852 - val_loss: 0.0501 - val_accuracy: 0.9851\n",
+            "469/469 [==============================] - 3s 6ms/step - loss: 0.0472 - accuracy: 0.9855 - val_loss: 0.0511 - val_accuracy: 0.9840\n",
             "Epoch 5/20\n",
-            "469/469 [==============================] - 3s 6ms/step - loss: 0.0376 - accuracy: 0.9886 - val_loss: 0.0571 - val_accuracy: 0.9826\n",
+            "469/469 [==============================] - 3s 6ms/step - loss: 0.0372 - accuracy: 0.9889 - val_loss: 0.0441 - val_accuracy: 0.9861\n",
             "Epoch 6/20\n",
-            "469/469 [==============================] - 3s 6ms/step - loss: 0.0306 - accuracy: 0.9904 - val_loss: 0.0460 - val_accuracy: 0.9861\n",
-            "Epoch 7/20\n",
-            "469/469 [==============================] - 3s 6ms/step - loss: 0.0245 - accuracy: 0.9925 - val_loss: 0.0722 - val_accuracy: 0.9796\n",
-            "Epoch 8/20\n",
-            "469/469 [==============================] - 3s 6ms/step - loss: 0.0203 - accuracy: 0.9935 - val_loss: 0.0486 - val_accuracy: 0.9859\n"
+            "460/469 [============================>.] - ETA: 0s - loss: 0.0306 - accuracy: 0.9901\n",
+            " reached 99% accuracy. Stopping training. Loss at: 0.030518991872668266\n",
+            "469/469 [==============================] - 3s 6ms/step - loss: 0.0305 - accuracy: 0.9902 - val_loss: 0.0546 - val_accuracy: 0.9845\n"
           ]
         }
       ]
